
Thu Sep  9 15:11:27 PDT 1999
(Mandrake)

added some function prototypes, fixed a merging conflict in kde.c

-------------------------------------------------------------------------------

Thu Sep  9 15:22:47 PDT 1999
(Mandrake)

somehow I lost some of this.  committing again.  (kde stuff for pager)

-------------------------------------------------------------------------------

Thu Sep  9 15:53:02 PDT 1999
(Mandrake)

kpanel's desktop switcher should work now.
still needs some work.

-------------------------------------------------------------------------------

Thu Sep  9 17:38:23 PDT 1999
(Mandrake)

more panel work

-------------------------------------------------------------------------------

Fri Sep 10 14:05:11 PDT 1999
(Raster)

dint get command form windows that are group leaders if the window doesnt 
have a command set on it explicitly.

-------------------------------------------------------------------------------

Fri Sep 10 14:14:11 PDT 1999
(Raster)

try this fix for focus loss (extra check for multihead case)

-------------------------------------------------------------------------------

Fri Sep 10 14:59:58 PDT 1999
(Raster)

more ref count to after discovery of the objetc, not before.. :)

-------------------------------------------------------------------------------

Fri Sep 10 15:45:37 PDT 1999
(Mandrake)

forgot something in one place.  client message processing

-------------------------------------------------------------------------------

Fri Sep 10 15:51:51 PDT 1999
(Raster)

doen allow user resize vertically and horizotnally whne shaeded too as well 
as normal resize

-------------------------------------------------------------------------------

Fri Sep 10 15:53:10 PDT 1999
(Raster)

and dont allow maximising fo windwos when shaded...

-------------------------------------------------------------------------------

Fri Sep 10 16:36:32 PDT 1999
(Raster)

and dont let fixed position windows move.. :)